Users working on Swagger
